--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-lan">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -159,7 +159,7 @@
         <span>Vima Donut Station</span>
         <h3>Bienvenidos, es hora de recargar tu antojo 😋</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis unde dolores temporibus hic quam debitis tenetur harum nemo.</p>
-        <a href="#" class="btn">order now</a>
+        <a href="#" class="btn">Pedir a domicilio</a>
     </div>
 
     <div class="image">
@@ -219,27 +219,27 @@
     </div>
 
     <div class="content">
-        <span>why choose us?</span>
-        <h3 class="title">what's make our food delicious!</h3>
+        <span>¿Por qué elegirnos?</span>
+        <h3 class="title">Porque hacemos comida deliciosa!</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos ut explicabo, numquam iusto est a ipsum assumenda tempore esse corporis?</p>
-        <a href="#" class="btn">read more</a>
+        <a href="#" class="btn">Leer más</a>
         <div class="icons-container">
             <div class="icons">
                 <img src="image/serv-1.png" alt="">
-                <h3>fast delivery</h3>
+                <h3>Entrega inmediata</h3>
             </div>  
             <div class="icons">
                 <img src="image/serv-2.png" alt="">
-                <h3>fresh food</h3>
+                <h3>Comida fresca</h3>
             </div>   
             <div class="icons">
                 <img src="image/serv-3.png" alt="">
-                <h3>best quality</h3>
+                <h3>La mejor calidad</h3>
             </div>  
-            <div class="icons">
+            <!--<div class="icons">
                 <img src="image/serv-4.png" alt="">
                 <h3>24/7 support</h3>
-            </div>           
+            </div>!-->        
         </div>
     </div>
 
@@ -252,8 +252,8 @@
 <section class="popular" id="popular">
 
     <div class="heading">
-        <span>popular food</span>
-        <h3>our special dishes</h3>
+        <span>popular</span>
+        <h3>Nuestros platos especiales:</h3>
     </div>
 
     <div class="box-container">
@@ -264,7 +264,7 @@
                 <img src="image/Donut6.png" alt="">
             </div>
             <div class="content">
-                <h3>delicious food</h3>
+                <h3>Comida</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -274,7 +274,7 @@
                     <span> (50) </span>
                 </div>
                 <div class="price">$40.00 <span>$50.00</span></div>
-                <a href="#" class="btn" id="prueba">add to cart</a>
+                <a href="#" class="btn" id="prueba">Agregar al carrito</a>
             </div>
         </div>
 
@@ -284,7 +284,7 @@
                 <img src="image/malteda1.png" alt="">
             </div>
             <div class="content">
-                <h3>delicious food</h3>
+                <h3>Comida</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -294,7 +294,7 @@
                     <span> (50) </span>
                 </div>
                 <div class="price">$40.00 <span>$50.00</span></div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Agregar al carrito</a>
             </div>
         </div>
 
@@ -304,7 +304,7 @@
                 <img src="image/Donut1.png" alt="">
             </div>
             <div class="content">
-                <h3>delicious food</h3>
+                <h3>Comida</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -314,7 +314,7 @@
                     <span> (50) </span>
                 </div>
                 <div class="price">$40.00 <span>$50.00</span></div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Agregar al carrito</a>
             </div>
         </div>
 
@@ -324,7 +324,7 @@
                 <img src="image/malteda3.png" alt="">
             </div>
             <div class="content">
-                <h3>delicious food</h3>
+                <h3>Comida</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -334,7 +334,7 @@
                     <span> (50) </span>
                 </div>
                 <div class="price">$40.00 <span>$50.00</span></div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Agregar al carrito</a>
             </div>
         </div>
 
@@ -344,7 +344,7 @@
                 <img src="image/Donut4.png" alt="">
             </div>
             <div class="content">
-                <h3>delicious food</h3>
+                <h3>Comida</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -354,7 +354,7 @@
                     <span> (50) </span>
                 </div>
                 <div class="price">$40.00 <span>$50.00</span></div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Agregar al carrito</a>
             </div>
         </div>
     </div>
@@ -374,8 +374,8 @@
 <section class="menu" id="menu">
 
     <div class="heading">
-        <span>our menu</span>
-        <h3>our top dishes</h3>
+        <span>Menú</span>
+        <h3>Nuestros platos premium</h3>
     </div>
 
     <div class="box-container">
@@ -383,7 +383,7 @@
         <a href="#" class="box">
             <img src="image/kisspng-juice-cocktail-lemonade-limeade-lemonade-5abbd78cec1d78.8763275315222598529671.png" alt="">
             <div class="content">
-                <h3>delicious food</h3>
+                <h3>Comida</h3>
                 <div class="price">$40.00</div>
             </div>
         </a>
@@ -391,7 +391,7 @@
         <a href="#" class="box">
             <img src="image/kisspng-coffee-milk-iced-coffee-coffee-cup-caff-mocha-coffe-ice-5b1fc037074824.5790397415288074790298.png" alt="">
             <div class="content">
-                <h3>delicious food</h3>
+                <h3>Comida</h3>
                 <div class="price">$40.00</div>
             </div>
         </a>
@@ -399,7 +399,7 @@
         <a href="#" class="box">
             <img src="image/kisspng-chocolate-ice-cream-muffin-pizza-delivery-5af5efe3384e55.1133671115260671712306.png" alt="">
             <div class="content">
-                <h3>delicious food</h3>
+                <h3>Comida</h3>
                 <div class="price">$40.00</div>
             </div>
         </a>
@@ -407,7 +407,7 @@
         <a href="#" class="box">
             <img src="image/kisspng-iced-coffee-kopi-luwak-cafe-tea-coffe-splash-5b5628d1ea2496.8846647215323732019591.png" alt="">
             <div class="content">
-                <h3>delicious food</h3>
+                <h3>Comida</h3>
                 <div class="price">$40.00</div>
             </div>
         </a>
@@ -415,7 +415,7 @@
         <a href="#" class="box">
             <img src="image/menu-5.png" alt="">
             <div class="content">
-                <h3>delicious food</h3>
+                <h3>Comida</h3>
                 <div class="price">$40.00</div>
             </div>
         </a>
@@ -423,7 +423,7 @@
         <a href="#" class="box">
             <img src="image/menu-6.png" alt="">
             <div class="content">
-                <h3>delicious food</h3>
+                <h3>Comida</h3>
                 <div class="price">$40.00</div>
             </div>
         </a>
@@ -439,8 +439,8 @@
 <section class="order" id="order">
 
     <div class="heading">
-        <span>order now</span>
-        <h3>fastest home delivery</h3>
+        <span>Ordena ahora!</span>
+        <h3>Rápida entrega a domicilio</h3>
     </div>
 
     <div class="icons-container">
