--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <section class="home" id="home">
 
     <div class="content">
-        <span>Vima Donut Station</span>
+        <span style="color: #130f40;">Vima Donut Station</span>
         <h3>Bienvenidos, es hora de recargar tu antojo 😋</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis unde dolores temporibus hic quam debitis tenetur harum nemo.</p>
         <a href="#" class="btn">Pedir a domicilio</a>
