Pagina Web Actualizada

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <a href="#" class="logo"> <img src="image/logo.png" width="40%" alt=""></a>
     
     <nav class="navbar">
-        <a href="#home">Principal</a>
-        <a href="#about">Acerca</a>
+        <a href="#about">Nosotros</a>
         <a href="#popular">Popular</a>
         <a href="#menu">Menú</a>
         <a href="#order">Pedir a domicilio</a>
@@ -33,123 +32,9 @@
 
     <div class="icons">
         <div id="menu-btn" class="fas fa-bars"></div>
-        <div id="search-btn" class="fas fa-search"></div>
     </div>
     
 </header>
-
-<!-- header section ends  -->
-
-<!-- search-form  -->
-
-<section class="search-form-container">
-
-    <form action="">
-        <input type="search" name="" placeholder="Busca productos aquí..." id="search-box">
-        <label for="search-box" class="fas fa-search"></label>
-    </form>
-
-</section>
-
-<!-- shopping-cart section  -->
-
-<section class="shopping-cart-container">
-
-    <div class="products-container">
-
-        <h3 class="title">your products</h3>
-
-        <div class="box-container">
-
-            <div class="box">
-                <i class="fas fa-times"></i>
-                <img src="image/menu-1.png" alt="">
-                <div class="content">
-                    <h3>delicious food</h3>
-                    <span> quantity : </span>
-                    <input type="number" name="" value="1" id="">
-                    <br>
-                    <span> price : </span>
-                    <span class="price"> $40.00 </span>
-                </div>
-            </div>
-
-            <div class="box">
-                <i class="fas fa-times"></i>
-                <img src="image/menu-2.png" alt="">
-                <div class="content">
-                    <h3>delicious food</h3>
-                    <span> quantity : </span>
-                    <input type="number" name="" value="1" id="">
-                    <br>
-                    <span> price : </span>
-                    <span class="price"> $40.00 </span>
-                </div>
-            </div>
-
-            <div class="box">
-                <i class="fas fa-times"></i>
-                <img src="image/menu-3.png" alt="">
-                <div class="content">
-                    <h3>delicious food</h3>
-                    <span> quantity : </span>
-                    <input type="number" name="" value="1" id="">
-                    <br>
-                    <span> price : </span>
-                    <span class="price"> $40.00 </span>
-                </div>
-            </div>
-
-            <div class="box">
-                <i class="fas fa-times"></i>
-                <img src="image/menu-4.png" alt="">
-                <div class="content">
-                    <h3>delicious food</h3>
-                    <span> quantity : </span>
-                    <input type="number" name="" value="1" id="">
-                    <br>
-                    <span> price : </span>
-                    <span class="price"> $40.00 </span>
-                </div>
-            </div>
-
-            <div class="box">
-                <i class="fas fa-times"></i>
-                <img src="image/menu-5.png" alt="">
-                <div class="content">
-                    <h3>delicious food</h3>
-                    <span> quantity : </span>
-                    <input type="number" name="" value="1" id="">
-                    <br>
-                    <span> price : </span>
-                    <span class="price"> $40.00 </span>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
-
-    <div class="cart-total">
-
-        <h3 class="title"> cart total </h3>
-
-        <div class="box">
-
-            <h3 class="subtotal"> subtotal : <span>$200</span> </h3>
-            <h3 class="total"> total : <span>$200</span> </h3>
-
-            <a href="#" class="btn">proceed to checkout</a>
-
-        </div>
-
-    </div>
-
-</section>
-
-<!-- login-form  -->
-
-
 
 <!-- home section starts  -->
 
@@ -157,9 +42,9 @@
 
     <div class="content">
         <span style="color: #130f40;">Vima Donut Station</span>
-        <h3>Bienvenidos, es hora de recargar tu antojo 😋</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis unde dolores temporibus hic quam debitis tenetur harum nemo.</p>
-        <a href="#" class="btn">Pedir a domicilio</a>
+        <h3>¡Es hora de recargar tu antojo 😋!</h3>
+        <p>¡Donas recién hechas, café aromático y snacks irresistibles te esperan! ☕ Descubre nuestros sabores únicos y comienza tu día con una sonrisa.</p>
+        <a href="#" class="btn">¡Pide Ahora!</a>
     </div>
 
     <div class="image">
@@ -177,32 +62,32 @@
 
     <a href="#" class="box" onclick="changeImg('image/Donut1.png')">
         <img src="image/Donut1.png" alt="">
-        <h3>Donut 1</h3>
+        <h3>Dona Homero</h3>
     </a>
 
     <a href="#" class="box" onclick="changeImg('image/Donut2.png')">
         <img src="image/Donut2.png" alt="">
-        <h3>Donut 2</h3>
+        <h3>Clásica Glaseada</h3>
     </a>
 
     <a href="#" class="box" onclick="changeImg('image/Donut3.png')">
         <img src="image/Donut3.png" alt="">
-        <h3>Donut 3</h3>
+        <h3>Chocolate y Chispas</h3>
     </a>
 
     <a href="#" class="box" onclick="changeImg('image/Donut4.png')">
         <img src="image/Donut4.png" alt="">
-        <h3>Donut 4</h3>
+        <h3>Chocolate Obscuro</h3>
     </a>
 
     <a href="#" class="box" onclick="changeImg('image/Donut5.png')">
         <img src="image/Donut5.png" alt="">
-        <h3>Donut 5</h3>
+        <h3>Glaseada y Canela</h3>
     </a>
 
     <a href="#" class="box" onclick="changeImg('image/Donut6.png')">
         <img src="image/Donut6.png" alt="">
-        <h3>Donut 6</h3>
+        <h3>Caramelo</h3>
     </a>
 
 </section>
@@ -219,28 +104,10 @@
     </div>
 
     <div class="content">
-        <span>¿Por qué elegirnos?</span>
-        <h3 class="title">Porque hacemos comida deliciosa!</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos ut explicabo, numquam iusto est a ipsum assumenda tempore esse corporis?</p>
-        <a href="#" class="btn">Leer más</a>
-        <div class="icons-container">
-            <div class="icons">
-                <img src="image/serv-1.png" alt="">
-                <h3>Entrega inmediata</h3>
-            </div>  
-            <div class="icons">
-                <img src="image/serv-2.png" alt="">
-                <h3>Comida fresca</h3>
-            </div>   
-            <div class="icons">
-                <img src="image/serv-3.png" alt="">
-                <h3>La mejor calidad</h3>
-            </div>  
-            <!--<div class="icons">
-                <img src="image/serv-4.png" alt="">
-                <h3>24/7 support</h3>
-            </div>!-->        
-        </div>
+        <span>Nuestro Sabor, Nuestra Historia</span>
+        <h3 class="title">El Corazón de Cada Dona</h3>
+        <p>Desde pequeños, soñábamos con crear donas que hicieran sonreír a la gente. Hoy, ese sueño se ha hecho realidad. Cada una de nuestras creaciones es un viaje culinario inspirado en los sabores de nuestra infancia y en los ingredientes más frescos de la temporada. Hecho a mano con amor, cada dona es una obra de arte que despertará tus sentidos.</p>
+        <a href="#menu" class="btn">Mira nuestro menú</a>
     </div>
 
 </section>
@@ -259,102 +126,97 @@
     <div class="box-container">
 
         <div class="box">
-            <a href="#" class="fas fa-heart"></a>
             <div class="image">
                 <img src="image/Donut6.png" alt="">
             </div>
             <div class="content">
-                <h3>Comida</h3>
+                <h3>Dona Caramelo</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
-                    <span> (50) </span>
+                    <span> (39) </span>
                 </div>
-                <div class="price">$40.00 <span>$50.00</span></div>
-                <a href="#" class="btn" id="prueba">Agregar al carrito</a>
+                <div class="price">$45.00 <span>$60.00</span></div>
+                <a href="#order" class="btn" id="prueba">Ordenar</a>
             </div>
         </div>
 
         <div class="box">
-            <a href="#" class="fas fa-heart"></a>
             <div class="image">
                 <img src="image/malteda1.png" alt="">
             </div>
             <div class="content">
-                <h3>Comida</h3>
+                <h3>Malteada de Caramelo</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
-                    <span> (50) </span>
+                    <span> (29) </span>
                 </div>
-                <div class="price">$40.00 <span>$50.00</span></div>
-                <a href="#" class="btn">Agregar al carrito</a>
+                <div class="price">$52.00 <span>$65.00</span></div>
+                <a href="#order" class="btn">Ordenar</a>
             </div>
         </div>
 
         <div class="box">
-            <a href="#" class="fas fa-heart"></a>
             <div class="image">
                 <img src="image/Donut1.png" alt="">
             </div>
             <div class="content">
-                <h3>Comida</h3>
+                <h3>Dona Homero</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
-                    <span> (50) </span>
+                    <span> (75) </span>
                 </div>
-                <div class="price">$40.00 <span>$50.00</span></div>
-                <a href="#" class="btn">Agregar al carrito</a>
+                <div class="price">$45.00 <span>$60.00</span></div>
+                <a href="#order" class="btn">Ordenar</a>
             </div>
         </div>
 
         <div class="box">
-            <a href="#" class="fas fa-heart"></a>
             <div class="image">
                 <img src="image/malteda3.png" alt="">
             </div>
             <div class="content">
-                <h3>Comida</h3>
+                <h3>Frappe de Chocolate</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
-                    <span> (50) </span>
+                    <span> (22) </span>
                 </div>
-                <div class="price">$40.00 <span>$50.00</span></div>
-                <a href="#" class="btn">Agregar al carrito</a>
+                <div class="price">$45.00 <span>$60.00</span></div>
+                <a href="#order" class="btn">Ordenar</a>
             </div>
         </div>
 
         <div class="box">
-            <a href="#" class="fas fa-heart"></a>
             <div class="image">
                 <img src="image/Donut4.png" alt="">
             </div>
             <div class="content">
-                <h3>Comida</h3>
+                <h3>Dona Chocolate Obscuro</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
-                    <span> (50) </span>
+                    <span> (36) </span>
                 </div>
-                <div class="price">$40.00 <span>$50.00</span></div>
-                <a href="#" class="btn">Agregar al carrito</a>
+                <div class="price">$44.00 <span>$60.00</span></div>
+                <a href="#order" class="btn">Ordenar</a>
             </div>
         </div>
     </div>
@@ -383,47 +245,39 @@
         <a href="#" class="box">
             <img src="image/kisspng-juice-cocktail-lemonade-limeade-lemonade-5abbd78cec1d78.8763275315222598529671.png" alt="">
             <div class="content">
-                <h3>Comida</h3>
-                <div class="price">$40.00</div>
+                <h3>Limonada</h3>
+                <div class="price">$25.00</div>
             </div>
         </a>
 
         <a href="#" class="box">
             <img src="image/kisspng-coffee-milk-iced-coffee-coffee-cup-caff-mocha-coffe-ice-5b1fc037074824.5790397415288074790298.png" alt="">
             <div class="content">
-                <h3>Comida</h3>
-                <div class="price">$40.00</div>
+                <h3>Café Frío</h3>
+                <div class="price">$35.00</div>
             </div>
         </a>
 
         <a href="#" class="box">
             <img src="image/kisspng-chocolate-ice-cream-muffin-pizza-delivery-5af5efe3384e55.1133671115260671712306.png" alt="">
             <div class="content">
-                <h3>Comida</h3>
-                <div class="price">$40.00</div>
+                <h3>Muffin de Chocolate</h3>
+                <div class="price">$15.00</div>
             </div>
         </a>
 
         <a href="#" class="box">
             <img src="image/kisspng-iced-coffee-kopi-luwak-cafe-tea-coffe-splash-5b5628d1ea2496.8846647215323732019591.png" alt="">
             <div class="content">
-                <h3>Comida</h3>
-                <div class="price">$40.00</div>
+                <h3>Café Americano</h3>
+                <div class="price">$35.00</div>
             </div>
         </a>
 
         <a href="#" class="box">
             <img src="image/menu-5.png" alt="">
             <div class="content">
-                <h3>Comida</h3>
-                <div class="price">$40.00</div>
-            </div>
-        </a>
-
-        <a href="#" class="box">
-            <img src="image/menu-6.png" alt="">
-            <div class="content">
-                <h3>Comida</h3>
+                <h3>Papas a la francesa</h3>
                 <div class="price">$40.00</div>
             </div>
         </a>
@@ -565,9 +419,9 @@
     <div class="bottom">
 
         <div class="share">
-            <a href="#" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
+            <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
+            <a href="https://x.com/?lang=es&mx=2" class="fab fa-twitter"></a>
+            <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
         </div>
 
         <div class="credit"> created <span>Santi Moreno</span> | <span>Vima Donut Station</span> | all rights reserved! </div>
