Correcciones y funcion añadida para complemetar esta pagina web

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vima Donuts Station</title>
+    <title>Vima Donut Station</title>
     <link rel="shortcut icon" href="image/logo.png" type="image/x-icon">
 
     <!-- font awesome cdn link  -->
@@ -44,7 +44,7 @@
         <span style="color: #130f40;">Vima Donut Station</span>
         <h3>¡Es hora de recargar tu antojo 😋!</h3>
         <p>¡Donas recién hechas, café aromático y snacks irresistibles te esperan! ☕ Descubre nuestros sabores únicos y comienza tu día con una sonrisa.</p>
-        <a href="#" class="btn">¡Pide Ahora!</a>
+        <a href="#order" class="btn">¡Pide Ahora!</a>
     </div>
 
     <div class="image">
@@ -275,10 +275,10 @@
         </a>
 
         <a href="#" class="box">
-            <img src="image/menu-5.png" alt="">
+            <img src="image/malteda4.png" alt="">
             <div class="content">
-                <h3>Papas a la francesa</h3>
-                <div class="price">$40.00</div>
+                <h3>Bebida Pumpkin Pie</h3>
+                <div class="price">$55.00</div>
             </div>
         </a>
 
@@ -321,47 +321,46 @@
         <div class="flex">
             <div class="inputBox">
                 <span>Nombre Completo</span>
-                <input type="text" placeholder="" name="" id="">
+                <input type="text" placeholder="Santiago Moreno Estrada" name="" id="name">
             </div>
             <div class="inputBox">
                 <span>Número celular</span>
-                <input type="number" placeholder="Número a 10 dígitos" name="" id="">
+                <input type="text" placeholder="Número a 10 dígitos" name="" id="phone">
             </div>
         </div>
 
         <div class="flex">
             <div class="inputBox">
                 <span>Su orden</span>
-                <input type="text" placeholder="¿Qué desea?" name="" id="prueba2">
+                <input type="text" placeholder="¿Qué desea?" name="" id="order">
             </div>
             <div class="inputBox">
                 <span>¿Cuánto?</span>
-                <input type="number" placeholder="Número de ordenes" name="" id="">
+                <input type="text" placeholder="Número de ordenes" name="" id="how-much">
             </div>
         </div>
 
         <div class="flex">
             <div class="inputBox">
                 <span>Detalles</span>
-                <input type="text" placeholder="¿En que podemos ayudarle?" name="" id="">
+                <input type="text" placeholder="¿En que podemos ayudarle?" name="" id="details">
             </div>
             <div class="inputBox">
                 <span>Seleccione día, fecha y hora</span>
-                <input type="datetime-local">
+                <input type="datetime-local" id="date">
             </div>
         </div>
 
         <div class="flex">
             <div class="inputBox">
-                <textarea placeholder="Dirección i/o referencia" id="" cols="30" rows="10"></textarea>
+                <textarea placeholder="Dirección i/o referencia" id="address" cols="30" rows="10"></textarea>
             </div>
             <div class="inputBox">
                 <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d470.21797304170224!2d-99.18082129148026!3d19.46661049140088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f935f8b8077b%3A0x772671fa23d3d52d!2sVIMA%20Donut%20Station!5e0!3m2!1ses-419!2smx!4v1643592938567!5m2!1ses-419!2smx" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
 
-        <input type="submit" value="Ordenar por whatsapp!" class="btn wh">
-
+        <input type="submit" value="Ordenar por whatsapp!" class="btn wh" id="send-order">
     </form>
 
 </section>
@@ -424,7 +423,7 @@
             <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
         </div>
 
-        <div class="credit"> created <span>Santi Moreno</span> | <span>Vima Donut Station</span> | all rights reserved! </div>
+        <div class="credit"> created by <span><a href="https://santis-personal-portfolio.netlify.app/" target="_blank">Santi M</a></span> | <span>Vima Donut Station</span> | all rights reserved! </div>
         
     </div>
 
